# music-player-simulator

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
includes/: playlist.hpp  track.hpp
src/: main.cpp  playlist.cpp  track.cpp
tests/: functional_tests.sh  functionnal_tests.sh  unit_tests.cpp
tests/files/: first  second
tests/inputs/: add_tracks_and_list  add_tracks_and_next_and_previous  add_tracks_and_remove_duplicates  add_tracks_and_remove_tracks  play_pause_resume_repeat  play_pause_resume_repeat_random  play_track_without_track  show_track
tests/outputs/: add_tracks_and_list  add_tracks_and_next_and_previous  add_tracks_and_remove_duplicates  add_tracks_and_remove_tracks  play_pause_resume_repeat  play_pause_resume_repeat_random  play_track_without_track  show_track
